ÂSe agregaron estilos

--- a/HojaDeVida.html
+++ b/HojaDeVida.html
@@ -5,170 +5,159 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dario Rodriguez CV</title>
-    <style>
-      td {
-        padding: 0 15px 0 15px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div style="text-align: center">
-      <h1>Información general</h1>
-      <img
-        src="https://www.seekpng.com/png/detail/61-617548_robert-downey-jr-png-pic-actor-que-hace.png"
-        alt="Foto Perfil"
-        style="width: 10%"
-      />
-      <h2 id="name">Dario Rodriguez Albarracin</h2>
-      <table
-        style="margin-left: auto; margin-right: auto"
-        width="60%"
-        height="160"
-      >
-        <tr>
-          <td>
+    <div class="principal_container">
+      <div class="info_container">
+        <div class="lateral_info">
+          <img
+            src="https://www.seekpng.com/png/detail/61-617548_robert-downey-jr-png-pic-actor-que-hace.png"
+            alt="Foto Perfil"
+          />
+          <h1>Información general</h1>
+
+          <table>
             <tr>
-              <td><b>LinkedIn</b></td>
               <td>
-                <a
-                  href="https://www.linkedin.com/in/dario-albarracin-001a7b4a/"
-                  target="_blank"
-                  ><p id="linkedIn">LinkedIn Dario Rodriguez</p>
-                </a>
+                <tr>
+                  <td><b>LinkedIn</b></td>
+                  <td>
+                    <a
+                      class="linkedin"
+                      href="https://www.linkedin.com/in/dario-albarracin-001a7b4a/"
+                      target="_blank"
+                      ><p>Dario Rodriguez</p>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td><b>Email: </b></td>
+                  <td>da_alba@hotmail.com</td>
+                </tr>
+                <tr>
+                  <td><b>Direccion: </b></td>
+                  <td>Kra 7 # 65-23</td>
+                </tr>
+                <tr>
+                  <td><b>Telefono: </b></td>
+                  <td>+575643587</td>
+                </tr>
+                <tr>
+                  <td><b>Celular: </b></td>
+                  <td>3003245687</td>
+                </tr>
+              </td>
+            </tr>
+          </table>
+        </div>
+
+        <div class="principal_info">
+          <h1 id="name">Dario Rodriguez Albarracin</h1>
+          <h2>Experiencia</h2>
+          <ol>
+            <li>
+              Empresa: Olimpia
+              <ul>
+                Cargo: Desarrollador móvil
+              </ul>
+            </li>
+            <li>
+              Empresa: Grupo ASD
+              <ul>
+                Cargo: Desarrollador Java 3
+              </ul>
+            </li>
+            <li>
+              Empresa: Grupo Distribuna
+              <ul>
+                Cargo: Desarrollador applicaciones móviles
+              </ul>
+            </li>
+            <li>
+              Empresa: Universidad Manuela Beltran
+              <ul>
+                Cargo: Joven Investigador
+              </ul>
+            </li>
+          </ol>
+
+          <h2>Habilidades técnicas</h2>
+          <table class="default">
+            <tr>
+              <th>Técnologia</th>
+              <th>Experiencia</th>
+            </tr>
+            <tr>
+              <td>Android</td>
+              <td>80%</td>
+            </tr>
+            <tr>
+              <td>Java</td>
+              <td>50%</td>
+            </tr>
+            <tr>
+              <td>HTML</td>
+              <td>20%</td>
+            </tr>
+            <tr>
+              <td>CSS</td>
+              <td>20%</td>
+            </tr>
+            <tr>
+              <td>JavaScript</td>
+              <td>20%</td>
+            </tr>
+          </table>
+
+          <h2>Intereses</h2>
+          <table class="default">
+            <tr>
+              <th>Campo</th>
+              <th>Interés</th>
+            </tr>
+            <tr>
+              <td>Aplicaciones móviles</td>
+              <td>
+                Desarollo de aplicaciones móviles para sistemas operativos
+                Android y iOS
               </td>
             </tr>
             <tr>
-              <td><b>Email: </b></td>
-              <td>da_alba@hotmail.com</td>
+              <td>Desarollo web</td>
+              <td>
+                Desarrollo de aplicaciones web empleando diferentes tecnologías
+              </td>
             </tr>
             <tr>
-              <td><b>Direccion: </b></td>
-              <td>Kra 7 # 65-23</td>
+              <td>Blockchain</td>
+              <td>Investigación, estudiar el estado del arte</td>
             </tr>
             <tr>
-              <td><b>Telefono: </b></td>
-              <td>+575643587</td>
+              <td>Realidad aumentada/virtual</td>
+              <td>Investigación, realizar experimentos sencillos</td>
             </tr>
             <tr>
-              <td><b>Celular: </b></td>
-              <td>3003245687</td>
+              <td>Metodologías agiles</td>
+              <td>
+                Estudio e implementación de diferentes Metodologías en el
+                desarrollo de software
+              </td>
             </tr>
-          </td>
-        </tr>
-      </table>
-    </div>
+          </table>
+        </div>
+      </div>
 
-    <h1>Experiencia</h1>
-    <ol>
-      <li>
-        Empresa: Olimpia
-        <ul>
-          Cargo: Desarrollador móvil
-        </ul>
-      </li>
-      <li>
-        Empresa: Grupo ASD
-        <ul>
-          Cargo: Desarrollador Java 3
-        </ul>
-      </li>
-      <li>
-        Empresa: Grupo Distribuna
-        <ul>
-          Cargo: Desarrollador applicaciones móviles
-        </ul>
-      </li>
-      <li>
-        Empresa: Universidad Manuela Beltran
-        <ul>
-          Cargo: Joven Investigador
-        </ul>
-      </li>
-    </ol>
-
-    <h1>Habilidades técnicas</h1>
-    <table class="default">
-      <tr>
-        <th>Técnologia</th>
-        <th>Experiencia</th>
-      </tr>
-      <tr>
-        <td>Android</td>
-        <td>80%</td>
-      </tr>
-      <tr>
-        <td>Java</td>
-        <td>50%</td>
-      </tr>
-      <tr>
-        <td>HTML</td>
-        <td>20%</td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td>20%</td>
-      </tr>
-      <tr>
-        <td>JavaScript</td>
-        <td>20%</td>
-      </tr>
-    </table>
-
-    <h1>Intereses</h1>
-    <table class="default">
-      <tr>
-        <th>Campo</th>
-        <th>Interés</th>
-      </tr>
-      <tr>
-        <td>Aplicaciones móviles</td>
-        <td>
-          Desarollo de aplicaciones móviles para sistemas operativos Android y
-          iOS
-        </td>
-      </tr>
-      <tr>
-        <td>Desarollo web</td>
-        <td>Desarrollo de aplicaciones web empleando diferentes tecnologías</td>
-      </tr>
-      <tr>
-        <td>Blockchain</td>
-        <td>Investigación, estudiar el estado del arte</td>
-      </tr>
-      <tr>
-        <td>Realidad aumentada/virtual</td>
-        <td>Investigación, realizar experimentos sencillos</td>
-      </tr>
-      <tr>
-        <td>Metodologías agiles</td>
-        <td>
-          Estudio e implementación de diferentes Metodologías en el desarrollo
-          de software
-        </td>
-      </tr>
-    </table>
-  </body>
-
-  <footer>
-    <h1>Contactame</h1>
-    <form>
-      <div>
-        <label for="Email" class="fcf-label">Tu Email</label>
-        <div>
+      <div class="footer_container">
+        <h3>Contactame</h3>
+        <form class="footer_container">
+          <label for="Email" class="fcf-label">Tu Email</label>
           <input type="email" name="Email" />
-        </div>
-      </div>
-
-      <div>
-        <label>Mensaje</label>
-        <div>
+          <label>Mensaje</label>
           <textarea rows="6" maxlength="3000"></textarea>
-        </div>
+          <button type="submit">Contactar</button>
+        </form>
       </div>
-
-      <div>
-        <button type="submit">Contactar</button>
-      </div>
-    </form>
-  </footer>
+    </div>
+  </body>
 </html>
